# HomeAssistant

./: CMakeLists.txt  CMakeLists.txt.user.fc9b756
src/: connectioncontroller.cpp  connectioncontroller.h  guicontroller.cpp  guicontroller.h  main.cpp  roomcontroller.cpp  roomcontroller.h
src/Connection/: connection.h
src/DataClasses/: component.cpp  component.h  room.cpp  room.h
ui/: main.qml  resources.qrc
ui/Components/: Style.qml
ui/Items/: CustomButton.qml  InfoBlock.qml
ui/Views/: Background.qml  MainView.qml  StartWindow.qml
